chore: modify open api specs to allow for more detailed are reusable types
