# ch10/devjobs/libs/api-types/model/baseCompany.ts
@@ -5,6 +5,8 @@
  * API for the DevJobs platform
  * OpenAPI spec version: 1.0.0
  */
-import type { BaseCompany } from './baseCompany';
 
-export type CreateCompany = BaseCompany;
+export interface BaseCompany {
+  name: string;
+  website?: string;
+}
