# ch10/devjobs/libs/api-types/model/createJobAllOf.ts
@@ -5,6 +5,7 @@
  * API for the DevJobs platform
  * OpenAPI spec version: 1.0.0
  */
-import type { BaseCompany } from './baseCompany';
 
-export type CreateCompany = BaseCompany;
+export type CreateJobAllOf = {
+  description?: string;
+};
