# ch10/devjobs/libs/api-types/model/index.ts
@@ -6,11 +6,22 @@
  * OpenAPI spec version: 1.0.0
  */
 
-export * from "./company";
-export * from "./createCompany";
-export * from "./createJob";
-export * from "./createUser";
-export * from "./createUserRole";
-export * from "./job";
-export * from "./user";
-export * from "./userRole";
+export * from './baseCompany';
+export * from './baseJob';
+export * from './baseUser';
+export * from './company';
+export * from './companyResponse';
+export * from './companyResponseAllOf';
+export * from './createCompany';
+export * from './createJob';
+export * from './createJobAllOf';
+export * from './createUser';
+export * from './createUserAllOf';
+export * from './createUserRole';
+export * from './job';
+export * from './jobResponse';
+export * from './jobResponseAllOf';
+export * from './user';
+export * from './userResponse';
+export * from './userResponseAllOf';
+export * from './userRole';
